--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Umamahesh Portfolio</title>
+  <title>Naveen Portfolio</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -200,4 +200,5 @@
   </script>
 </body>
 </html>
+
 
